Use Orbitron font instead of Dune Rise

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,6 @@
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700&display=swap');
 
-/* Dune Rise font */
-@font-face {
-    font-family: 'Dune Rise';
-    src: url('/fonts/Dune_Rise.otf') format('opentype'),
-         url('/fonts/Dune_Rise.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
 
 /* Reset and Base */
 * {
@@ -107,7 +99,7 @@ nav a:hover {
 
 /* Awesome Font Mode */
 body.awesome-font {
-    font-family: 'Dune Rise', 'Orbitron', sans-serif;
+    font-family: 'Orbitron', sans-serif;
 }
 
 body.awesome-font h1,
@@ -117,7 +109,7 @@ body.awesome-font h4,
 body.awesome-font .site-title,
 body.awesome-font nav a,
 body.awesome-font .font-toggle-btn {
-    font-family: 'Dune Rise', 'Orbitron', sans-serif;
+    font-family: 'Orbitron', sans-serif;
 }
 
 /* Hero Section */
