Add Mastodon timeline feed to homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,5 +67,8 @@
             });
         })();
     </script>
+    {% if page.mastodon_feed %}
+    <script src="{{ '/js/mastodon-timeline.js' | relative_url }}"></script>
+    {% endif %}
 </body>
 </html>
