added SJSU Computer Engineering

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="https://www.sjsu.edu/cmpe/index.php" class="site-title">Computer Engineering</a>
+            <a href="https://www.sjsu.edu/cmpe/index.php" class="site-title">SUSU Computer Engineering</a>
             <nav>
                 <a href="{{ '/' | relative_url }}">Home</a>
                 <a href="{{ '/icpc/' | relative_url }}">ICPC Team</a>
