added projects page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
                 <a href="{{ '/icpc/' | relative_url }}">ICPC Team</a>
                 <a href="{{ '/systems-group/' | relative_url }}">Systems Group</a>
                 <a href="{{ '/distributed-systems/' | relative_url }}">Distributed Systems</a>
+                <a href="{{ '/projects/' | relative_url }}">MS&Senior Projects</a>
                 <a href="{{ '/experimental-courses/' | relative_url }}">Courses</a>
                 <a href="{{ '/videos/' | relative_url }}">Videos</a>
             </nav>
