updated header with extra book chapters

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
             <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
             <nav>
                 <a href="{{ '/' | relative_url }}">Home</a>
+                <a href="{{ '/extra-chapters' | relative_url }}">Extra Book Chapters</a>
                 <a href="{{ '/icpc/' | relative_url }}">ICPC Team</a>
                 <a href="{{ '/systems-group/' | relative_url }}">Systems Group</a>
                 <a href="{{ '/distributed-systems/' | relative_url }}">Distributed Systems</a>
